tdf#127362 DOCX export: fix image hyperlink to bookmark target

Images as hyperlinks to internal bookmark targets with spaces
didn't work after export.

Change-Id: I281b2cde276607aa93de92745cfa1ba887ba9976